--- a/_includes/education.html
+++ b/_includes/education.html
@@ -4,20 +4,10 @@
         <header>
             <h1>Phd in Stomatology</h1>
             <span>Peking University</span>
-            <span><address>Beijing, China</address><time>2000 to 2010</time></span>
+            <span><address>Beijing, CHN</address><time>2000 to 2010</time></span>
         </header>
         <p>
             <em>Thesis: Aggressive periodontitis related SNP polymorphism.</em>
-        </p>
-    </article>
-    <article>
-        <header>
-            <h1>Major in Stomatology</h1>
-            <span>University of College London</span>
-            <span><address>London, UK</address><time>2007 to 2011</time></span>
-        </header>
-        <p>
-            <em>Dissertation: Te dicit scripta nec, nec illud decore partem et.</em>
         </p>
     </article>
 </section>
