--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -2,43 +2,11 @@
     <h1>Employment</h1>
     <article>
         <header>
-            <h1>Software Engineer</h1>
-            <span><address>Edinburgh, UK</address><time>2015 to Present</time></span>
+            <h1>Researcher</h1>
+            <span><address>Beijing, CHN</address><time>2010 to 2019</time></span>
         </header>
-        <p>Lorem ipsum dolor sit amet, his et viris petentium philosophia,
-            at vix debitis deleniti. At vis velit volumus alienum, agam vocent assueverit usu ex. </p>
-    </article>
-    <article>
-        <header>
-            <h1>iOS Developer</h1>
-            <span><address>Glasgow, UK</address><time>2014 to 2015</time></span>
-        </header>
-        <p>Qui bonorum menandri intellegebat ex, mel quando oblique an. Et eam virtute debitis philosophia,
-            unum ancillae disputationi vim in. Ipsum vidisse meliore ex eum,
-            delectus tacimates conclusionemque has ei. Eam ubique cetero scribentur ne.</p>
-    </article>
-    <article>
-        <header>
-            <h1>Teaching Assistant</h1>
-            <span><address>University of Glasgow, Glasgow, UK</address><time>2013 to 2014</time></span>
-        </header>
-        <p>Latine bonorum deserunt at nam. Mea nisl officiis eu, propriae similique has te, mei an brute meliore electram.
-            Quo admodum omittantur ei, etiam principes at eos. Sit vocent commodo ceteros in, at mel idque everti.</p>
-    </article>
-    <article>
-        <header>
-            <h1>iOS Developer</h1>
-            <span><address>Student Start-up, Glasgow, UK</address><time>2013</time></span>
-        </header>
-        <p>Mucius sententiae et mei, nec an diam ignota, tale epicurei intellegebat ne sit. Sumo pertinacia contentiones duo ei.</p>
-    </article>
-    <article>
-        <header>
-            <h1>Web Developer</h1>
-            <span><address>Birmingham, UK</address><time>2007 to 2010</time></span>
-        </header>
-        <p> Et sed tritani volumus, dico rebum facilisis ea sed. His mundi efficiantur concludaturque no.
-            Cu eos argumentum constituam repudiandae, eu eum lorem nostrum, ei mel dicam iriure fabellas.
-        </p>
+        <p>Application of machine learning to predict aggressive periodontitis progression</p>
+        <p>Human genetic data analysis with SAS</p>    
+        <p>Human dental roots 3D shape digital model implementation</p>
     </article>
 </section>
