--- a/_includes/initiatives.html
+++ b/_includes/initiatives.html
@@ -1,21 +1,12 @@
 <section class="thirteen columns">
-    <h1>Initiatives</h1>
+    <h1>Internship</h1>
     <article>
         <header>
-            <h1>Graduate Summer Student</h1>
-            <span><address>University of Glasgow, UK</address><time>2013</time></span>
+            <h1>Trainee</h1>
+            <span><address>Planmeca, Helsinki</address><time>2019</time></span>
         </header>
         <p>
-            Courses: Nec et duis iriure temporibus, ullum adolescens eam ea.
-        </p>
-    </article>
-    <article>
-        <header>
-            <h1>Student Volunteer</h1>
-            <span><address>British RedCross, Glasgow, UK</address><time>2013</time></span>
-        </header>
-        <p>
-            Fundraiser: Lorem adipiscing ei eam, eros conceptam maiestatis ne sea.
+            CBCT imaging products experience and comment.<br/>Sales data collection and analysis.<br/>Research literature retrieve
         </p>
     </article>
 </section>
