--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -1,6 +1,6 @@
 <section class="thirteen columns">
     <h1>Hobbies</h1>
     <article>
-        <p>Music, Movies, Sewing, Travelling, Cooking.</p>
+        <p>Music, Movies, Sewing, Cooking.</p>
     </article>
 </section>
