--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -2,18 +2,19 @@
     <h1>Skills</h1>
     <article>
         <header>
-            <h1>Data Analysis and Machine Learning</h1>
+            <h1>Machine Learning, Deep Learning, and Data Statistics</h1>
         </header>
         <p>
-            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;<em>Python</em> &amp; <em>SPSS</em>
+            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i>
+            &nbsp;&nbsp;<em>Python</em> 
+        </p>    
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;<em>SQL</em> &amp; <em>Git</em>
+            &nbsp;&nbsp;<em>SQL</em> &amp; <em>Javascript</em>
         </p>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;<em>HTML</em>
+            &nbsp;&nbsp;<em>HTML</em> &amp; <em>CSS</em>
         </p>
     </article>
 </section>
