--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -2,7 +2,7 @@
     <h1>Employment</h1>
     <article>
         <header>
-            <h1>Researcher</h1>
+            <h1>Researcher and Data Analyst</h1>
             <span><address>Beijing, CHN</address><time>2010 to 2019</time></span>
         </header>
         <p>Application of machine learning to predict aggressive periodontitis progression</p>
